--- a/display_all_tickers.ipynb
+++ b/display_all_tickers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "70a2c211",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "2e7b4f83",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "c66940bb",
    "metadata": {},
    "outputs": [],
@@ -76,8 +76,8 @@
     "    #fig.update_layout(yaxis_type=\"log\")\n",
     "    \n",
     "    \n",
-    "    file_name = sym + '.html'\n",
-    "    pio.write_html(fig, file=file_name, auto_open=True)\n",
+    "    file_name = 'pages/' + sym + '.html'\n",
+    "    pio.write_html(fig, file=file_name, auto_open=False)\n",
     "    #fig.show()\n"
    ]
   },
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
