--- a/display_all_tickers_dash.ipynb
+++ b/display_all_tickers_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "70a2c211",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,9 @@
     "import plotly.graph_objects as go\n",
     "#import plotly\n",
     "import plotly.io as pio\n",
-    "import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
+    "import dateutil.relativedelta\n",
+    "from datetime import date\n",
     "\n",
     "import dash\n",
     "from dash import dcc\n",
@@ -22,35 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "2e7b4f83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tickers = ['jpm', 'tsla', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM']\n",
-    "tickers = ['SPY']"
+    "tickers = ['jpm', 'tsla', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM']\n",
+    "#tickers = ['SPY', 'jpm']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "c66940bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure()\n",
     "app = dash.Dash()\n",
+    "fig = go.Figure()\n",
+    "fig_list = []\n",
     "\n",
     "# define 6 month default date range\n",
-    "end_dt = datetime.date.today()\n",
-    "start_dt = end_dt + relativedelta(months=-6)\n",
+    "end_dt = date.today()\n",
+    "start_dt = end_dt + relativedelta(months=-12)\n",
+    "graph_start_dt = end_dt + relativedelta(months=-12)\n",
     "\n",
     "for sym in tickers:\n",
+    "    \n",
     "    file_name = 'data/' + sym + '.pkl'\n",
     "    if not exists( file_name ):\n",
     "        continue\n",
     "    \n",
     "    df = pd.read_pickle( file_name )\n",
+    "    df = df.loc[graph_start_dt:]\n",
     "    \n",
     "    fig = go.Figure(go.Ohlc(x=df.index,\n",
     "        open=df['Open'],\n",
@@ -78,15 +83,10 @@
     "\n",
     "    fig.update_layout(xaxis_range=[start_dt,\n",
     "                        end_dt ])\n",
-    "    #fig.update_layout(yaxis_type=\"log\")\n",
     "    \n",
-    "    \n",
-    "    file_name = sym + '.html'\n",
-    "    #pio.write_html(fig, file=file_name, auto_open=True)\n",
-    "    #fig.show()\n",
-    "    app.layout = html.Div([\n",
-    "            dcc.Graph(figure=fig)\n",
-    "        ])\n"
+    "    fig_list.append( html.Div( dcc.Graph(figure=fig) ) )\n",
+    "\n",
+    "app.layout = html.Div( children=fig_list )\n"
    ]
   },
   {
@@ -101,6 +101,42 @@
      "text": [
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: on\n"
@@ -110,14 +146,6 @@
    "source": [
     "app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Jupyter\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e033b5fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
