updated to remove pkl files and all sqlite

--- a/display_all_tickers_dash.ipynb
+++ b/display_all_tickers_dash.ipynb
@@ -13,7 +13,7 @@
     "#import plotly\n",
     "import plotly.io as pio\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "import dateutil.relativedelta\n",
+    "#import dateutil.relativedelta\n",
     "from datetime import date\n",
     "\n",
     "import dash\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "c66940bb",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,15 @@
     "    if not exists( file_name ):\n",
     "        continue\n",
     "    \n",
+    "    # read in data\n",
     "    df = pd.read_pickle( file_name )\n",
+    "    \n",
+    "    # build averages\n",
+    "    df['close_30day'] = df['Close'].rolling(window=30).mean()\n",
+    "    df['close_60day'] = df['Close'].rolling(window=60).mean()\n",
+    "    df['close_90day'] = df['Close'].rolling(window=90).mean()\n",
+    "    \n",
+    "    # limit data\n",
     "    df = df.loc[graph_start_dt:]\n",
     "    \n",
     "    fig = go.Figure(go.Ohlc(x=df.index,\n",
@@ -99,6 +107,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
