finished moving fully to sqlite3

--- a/display_all_tickers_dash.ipynb
+++ b/display_all_tickers_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "id": "70a2c211",
    "metadata": {},
    "outputs": [],
@@ -10,66 +10,79 @@
     "import pandas as pd\n",
     "from os.path import exists\n",
     "import plotly.graph_objects as go\n",
-    "#import plotly\n",
     "import plotly.io as pio\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "#import dateutil.relativedelta\n",
     "from datetime import date\n",
-    "\n",
     "import dash\n",
     "from dash import dcc\n",
-    "from dash import html"
+    "from dash import html\n",
+    "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "2e7b4f83",
+   "execution_count": 94,
+   "id": "6ab2d5b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers = ['jpm', 'tsla', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM']\n",
-    "#tickers = ['SPY', 'jpm']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "c66940bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app = dash.Dash()\n",
-    "fig = go.Figure()\n",
-    "fig_list = []\n",
+    "# make DB connection\n",
+    "con = sqlite3.connect('data/stocks.db')\n",
     "\n",
+    "# get max dates from stocks.db\n",
+    "tickers = []\n",
+    "for row in con.execute('select ticker from stocks group by ticker'):\n",
+    "    tickers.append(row[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "cb02fdaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# define 6 month default date range\n",
     "end_dt = date.today()\n",
     "start_dt = end_dt + relativedelta(months=-12)\n",
     "graph_start_dt = end_dt + relativedelta(months=-12)\n",
     "\n",
+    "# pull data from sqllite3\n",
+    "#sql = 'select ticker, date, open, high, low, close from stocks where date >= \"' + str(start_dt) + '\" order by ticker, Date'\n",
+    "#stocks = pd.read_sql_query(sql, con=con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "c66940bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig_list = []\n",
+    "\n",
     "for sym in tickers:\n",
     "    \n",
-    "    file_name = 'data/' + sym + '.pkl'\n",
-    "    if not exists( file_name ):\n",
-    "        continue\n",
-    "    \n",
-    "    # read in data\n",
-    "    df = pd.read_pickle( file_name )\n",
+    "    # pull data from sqllite3\n",
+    "    sql = 'select date, open, high, low, close from stocks where date >= \"' + str(start_dt) + '\" and ticker = \"' + sym + '\" order by date'\n",
+    "    df = pd.read_sql_query(sql, con=con)\n",
+    "    df['date'] = df['date'].astype( 'datetime64' )\n",
+    "    df = df.set_index('date', drop=True)\n",
     "    \n",
     "    # build averages\n",
-    "    df['close_30day'] = df['Close'].rolling(window=30).mean()\n",
-    "    df['close_60day'] = df['Close'].rolling(window=60).mean()\n",
-    "    df['close_90day'] = df['Close'].rolling(window=90).mean()\n",
+    "    df['close_30day'] = df['close'].rolling(window=30).mean()\n",
+    "    df['close_60day'] = df['close'].rolling(window=60).mean()\n",
+    "    df['close_90day'] = df['close'].rolling(window=90).mean()\n",
     "    \n",
     "    # limit data\n",
     "    df = df.loc[graph_start_dt:]\n",
     "    \n",
     "    fig = go.Figure(go.Ohlc(x=df.index,\n",
-    "        open=df['Open'],\n",
-    "        high=df['High'],\n",
-    "        low=df['Low'],\n",
-    "        close=df['Close'],\n",
+    "        open=df['open'],\n",
+    "        high=df['high'],\n",
+    "        low=df['low'],\n",
+    "        close=df['close'],\n",
     "        showlegend=True))\n",
     "    \n",
     "    fig.add_trace(go.Scatter(x=df.index, \n",
@@ -93,13 +106,12 @@
     "                        end_dt ])\n",
     "    \n",
     "    fig_list.append( html.Div( dcc.Graph(figure=fig) ) )\n",
-    "\n",
-    "app.layout = html.Div( children=fig_list )\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "3ebef04a",
    "metadata": {},
    "outputs": [
@@ -151,6 +163,18 @@
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: on\n"
@@ -158,6 +182,8 @@
     }
    ],
    "source": [
+    "app = dash.Dash()\n",
+    "app.layout = html.Div( children=fig_list )\n",
     "app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Jupyter\n"
    ]
   }
