--- a/get_data-sql.ipynb
+++ b/get_data-sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "0b310cfa",
    "metadata": {},
    "outputs": [],
@@ -13,39 +13,34 @@
     "from datetime import date\n",
     "from dateutil.relativedelta import relativedelta\n",
     "from os.path import exists\n",
-    "import sqlite3\n",
-    "#from sqlalchemy import create_engine"
+    "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "id": "6f603731",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers = ['JPM', 'TSLA', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM', 'AAPL']"
+    "tickers = ['JPM', 'TSLA', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM', 'AAPL', 'GME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "1b71defd",
+   "execution_count": 122,
+   "id": "1f5d95d1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JPM 2022-08-04 to 2022-08-06\n",
-      "TSLA 2022-08-04 to 2022-08-06\n",
-      "SPY 2022-08-04 to 2022-08-06\n",
-      "BRK-B 2022-08-04 to 2022-08-06\n",
-      "INTC 2022-08-04 to 2022-08-06\n",
-      "SSO 2022-08-04 to 2022-08-06\n",
-      "ROM 2022-08-04 to 2022-08-06\n",
-      "AAPL 2000-01-01 to 2022-08-06\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x136c48c40>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -56,6 +51,39 @@
     "#engine = create_engine('sqlite:///data/stocks.db', echo=False)\n",
     "con = sqlite3.connect('data/stocks.db')\n",
     "\n",
+    "# create my tables if they don't exist\n",
+    "con.execute('create table if not exists stocks ( date text, open float, high float, low float, close float, adj_close float, volume float, ticker text );')\n",
+    "con.execute('create index if not exists \"ix_stocks_ticker\" ON stocks (\"ticker\");')\n",
+    "con.execute('create index if not exists \"ix_stocks_ticker_sym\" ON stocks (\"ticker\", \"sym\");')\n",
+    "\n",
+    "con.execute('create table if not exists stocks_upload ( date text, open float, high float, low float, close float, adj_close float, volume float, ticker text );')\n",
+    "con.execute('create index if not exists \"ix_stocks_upload_ticker\" ON stocks_upload (\"ticker\");')\n",
+    "con.execute('create index if not exists \"ix_stocks_upload_ticker_sym\" ON stocks_upload (\"ticker\", \"sym\");')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "1b71defd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JPM 2000-01-01 to 2022-08-06\n",
+      "TSLA 2000-01-01 to 2022-08-06\n",
+      "SPY 2000-01-01 to 2022-08-06\n",
+      "BRK-B 2000-01-01 to 2022-08-06\n",
+      "INTC 2000-01-01 to 2022-08-06\n",
+      "SSO 2000-01-01 to 2022-08-06\n",
+      "ROM 2000-01-01 to 2022-08-06\n",
+      "AAPL 2000-01-01 to 2022-08-06\n",
+      "GME 2000-01-01 to 2022-08-06\n"
+     ]
+    }
+   ],
+   "source": [
     "# get max dates from stocks.db\n",
     "max_date = {}\n",
     "for row in con.execute('SELECT ticker, max(Date) FROM stocks group by ticker ORDER BY ticker'):\n",
@@ -90,11 +118,16 @@
     "    # add the ticker to the df for prep to send to DB\n",
     "    df['ticker'] = sym\n",
     "\n",
+    "    # fix some column names like I like\n",
+    "    df = df.reset_index()                             # move Date to regular column\n",
+    "    df.columns = df.columns.str.lower()               # lower case column names\n",
+    "    df.columns = df.columns.str.replace(' ', '_')     # replace spaces in names with _\n",
+    "    \n",
     "    # saving to temp table. then will delete overlapping data from base table\n",
-    "    df.to_sql('stocks_upload', con=con, if_exists='replace')\n",
+    "    df.to_sql('stocks_upload', con=con, if_exists='replace', index=False ) #, dtype={'date': 'text'} )\n",
     "    \n",
     "    # delete from base table where we have over lapping data\n",
-    "    sql = 'delete from stocks where ticker like \"' + sym + '\" and Date in (select Date from stocks_upload group by Date)'\n",
+    "    sql = 'delete from stocks where ticker like \"' + sym + '\" and date in (select date from stocks_upload group by date)'\n",
     "    con.execute(sql)\n",
     "    \n",
     "    # add the newly updated data to the base table\n",
@@ -109,11 +142,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "563e8d64",
+   "execution_count": 124,
+   "id": "6c90eff9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>ticker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002-02-13</td>\n",
+       "      <td>2.406250</td>\n",
+       "      <td>2.515000</td>\n",
+       "      <td>2.381250</td>\n",
+       "      <td>2.512500</td>\n",
+       "      <td>1.691667</td>\n",
+       "      <td>76216000</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-02-14</td>\n",
+       "      <td>2.543750</td>\n",
+       "      <td>2.548750</td>\n",
+       "      <td>2.481250</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>11021600</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-02-15</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2.506250</td>\n",
+       "      <td>2.462500</td>\n",
+       "      <td>2.487500</td>\n",
+       "      <td>1.674834</td>\n",
+       "      <td>8389600</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002-02-19</td>\n",
+       "      <td>2.475000</td>\n",
+       "      <td>2.475000</td>\n",
+       "      <td>2.343750</td>\n",
+       "      <td>2.387500</td>\n",
+       "      <td>1.607504</td>\n",
+       "      <td>7410400</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002-02-20</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>2.468750</td>\n",
+       "      <td>2.381250</td>\n",
+       "      <td>2.468750</td>\n",
+       "      <td>1.662210</td>\n",
+       "      <td>6892800</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5151</th>\n",
+       "      <td>2022-08-01</td>\n",
+       "      <td>33.799999</td>\n",
+       "      <td>35.709999</td>\n",
+       "      <td>33.770000</td>\n",
+       "      <td>34.779999</td>\n",
+       "      <td>34.779999</td>\n",
+       "      <td>4196600</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5152</th>\n",
+       "      <td>2022-08-02</td>\n",
+       "      <td>35.900002</td>\n",
+       "      <td>36.799999</td>\n",
+       "      <td>35.119999</td>\n",
+       "      <td>35.840000</td>\n",
+       "      <td>35.840000</td>\n",
+       "      <td>4697100</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5153</th>\n",
+       "      <td>2022-08-03</td>\n",
+       "      <td>36.220001</td>\n",
+       "      <td>38.009998</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>37.930000</td>\n",
+       "      <td>37.930000</td>\n",
+       "      <td>5186500</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5154</th>\n",
+       "      <td>2022-08-04</td>\n",
+       "      <td>38.340000</td>\n",
+       "      <td>39.889999</td>\n",
+       "      <td>37.889999</td>\n",
+       "      <td>38.360001</td>\n",
+       "      <td>38.360001</td>\n",
+       "      <td>5421500</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5155</th>\n",
+       "      <td>2022-08-05</td>\n",
+       "      <td>37.369999</td>\n",
+       "      <td>40.430000</td>\n",
+       "      <td>36.560001</td>\n",
+       "      <td>40.020000</td>\n",
+       "      <td>40.020000</td>\n",
+       "      <td>8082600</td>\n",
+       "      <td>GME</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5156 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date       open       high        low      close  adj_close  \\\n",
+       "0    2002-02-13   2.406250   2.515000   2.381250   2.512500   1.691667   \n",
+       "1    2002-02-14   2.543750   2.548750   2.481250   2.500000   1.683250   \n",
+       "2    2002-02-15   2.500000   2.506250   2.462500   2.487500   1.674834   \n",
+       "3    2002-02-19   2.475000   2.475000   2.343750   2.387500   1.607504   \n",
+       "4    2002-02-20   2.400000   2.468750   2.381250   2.468750   1.662210   \n",
+       "...         ...        ...        ...        ...        ...        ...   \n",
+       "5151 2022-08-01  33.799999  35.709999  33.770000  34.779999  34.779999   \n",
+       "5152 2022-08-02  35.900002  36.799999  35.119999  35.840000  35.840000   \n",
+       "5153 2022-08-03  36.220001  38.009998  36.000000  37.930000  37.930000   \n",
+       "5154 2022-08-04  38.340000  39.889999  37.889999  38.360001  38.360001   \n",
+       "5155 2022-08-05  37.369999  40.430000  36.560001  40.020000  40.020000   \n",
+       "\n",
+       "        volume ticker  \n",
+       "0     76216000    GME  \n",
+       "1     11021600    GME  \n",
+       "2      8389600    GME  \n",
+       "3      7410400    GME  \n",
+       "4      6892800    GME  \n",
+       "...        ...    ...  \n",
+       "5151   4196600    GME  \n",
+       "5152   4697100    GME  \n",
+       "5153   5186500    GME  \n",
+       "5154   5421500    GME  \n",
+       "5155   8082600    GME  \n",
+       "\n",
+       "[5156 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
