added data dir creation

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0b310cfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import yfinance as yf\n",
-    "import pickle\n",
     "from datetime import date\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "from os.path import exists\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "from os import makedirs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "6f603731",
    "metadata": {},
    "outputs": [],
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1f5d95d1",
    "metadata": {},
    "outputs": [
@@ -51,6 +50,9 @@
    "source": [
     "# today's date + 1 for the end date\n",
     "end_dt = date.today() + relativedelta(days=+1)\n",
+    "\n",
+    "# create data folder if doesn't exist\n",
+    "makedirs('data', mode = 0o755, exist_ok=True)\n",
     "\n",
     "# setup sql connection\n",
     "#engine = create_engine('sqlite:///data/stocks.db', echo=False)\n",
@@ -113,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64654488",
+   "id": "09ce804a",
    "metadata": {},
    "outputs": [],
    "source": []
