get_data is just now a base python script

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -22,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# eventually will put this in a config file. but good enough for now\n",
     "tickers = ['JPM', 'TSLA', 'SPY', 'BRK-B', 'INTC', 'SSO', 'ROM', 'AAPL', 'GME']"
    ]
   },
@@ -39,11 +40,11 @@
       "TSLA 2022-08-05 to 2022-08-07\n",
       "SPY 2022-08-05 to 2022-08-07\n",
       "BRK-B 2022-08-05 to 2022-08-07\n",
-      "INTC 2022-08-05 to 2022-08-07\n",
-      "SSO 2022-08-05 to 2022-08-07\n",
-      "ROM 2022-08-05 to 2022-08-07\n",
-      "AAPL 2022-08-05 to 2022-08-07\n",
-      "GME 2022-08-05 to 2022-08-07\n"
+      "INTC 2000-01-01 to 2022-08-07\n",
+      "SSO 2000-01-01 to 2022-08-07\n",
+      "ROM 2000-01-01 to 2022-08-07\n",
+      "AAPL 2000-01-01 to 2022-08-07\n",
+      "GME 2000-01-01 to 2022-08-07\n"
      ]
     }
    ],
